# bzk-address-parsing

./: .geonames_cache.json  .gitattributes  .gitignore  Dockerfile  README.md  Untitled.ipynb  Untitled1.ipynb  augmentation.py  base.py  best_trial_Qwen3.5-9B_preds.json  build_geonames_db.py  build_sample.py  bzk-post-processing-split.ipynb  cached_preds_train.json  cached_preds_train_new.json  cached_preds_val.json  cached_preds_val_new.json  compare-copy.ipynb  compare.ipynb  compare_clustering.py  country-or-state-name-new-broken.csv  country-or-state-name.csv  cross_val_evaluation.ipynb  datatset_statistics.ipynb  date_normalization.ipynb  deepparse_parser.py  docker-compose.yml  entity_linking.ipynb  error_analysis.ipynb  eval_rules.py  geonames_db_client.py  geonames_db_search.py  induce_rules.py  jsonify.py  libpostal-test.ipynb  libpostal_client.py  libpostal_server.py  llm_token_classifiers.py  llms.ipynb  lookup_table_generation.py  (+38 more)
bzk_address_parsing.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
date_normalization/: date_extractor.py
modules/: build_geonames_db.py  deepparse_parser.py  geonames_db_search.py  libpostal_client.py  llms.py  optuna_utils.py  token_classifiers.py  train_ner.py  utils.py
modules/libpostal-server/: Dockerfile
open_data/: bzkopen_addresses_test.csv  bzkopen_addresses_train.csv  bzkopen_addresses_val.csv
prompts/: prompt_0.txt  prompt_1.txt  prompt_2.txt  prompt_3.txt  prompt_4.txt  prompt_5.txt  prompt_6.txt  prompt_7.txt  prompt_optuna_best.txt
tests/: utils_test.py
(+153 files in other folders)
