[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
    "mllms",
    "utils",
    "token_classifiers",
    "augmentation",
    "deepparse_parser",
    "libpostal_client",
    "libpostal_server",
    "place_lookup",
    "lookup_table_generation",
    "jsonify",
    "run_patternsim3shot",
]

[tool.uv.sources]
de-core-news-sm = { url = "https://github.com/explosion/spacy-models/releases/download/de_core_news_sm-3.8.0/de_core_news_sm-3.8.0-py3-none-any.whl" }

[project]
name = "bzk-address-parsing"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.3.3",
    "numpy>=2.2.6",
    "torch>=2.10.0",
    "transformers>=4.0.0",
    "accelerate>=0.20.0",
    "huggingface-hub>=0.20.0",
    "sentence-transformers>=2.0.0",
    "deepparse>=0.9.0",
    "rdflib>=7.0.0",
    "rapidfuzz>=3.0.0",
    "requests>=2.25.1",
    "tqdm>=4.0.0",
    "matplotlib>=3.0.0",
    "ipympl>=0.9.0",
    "spacy>=3.8.11",
    "de-core-news-sm",
    "datasets>=4.7.0",
    "spacy-lookups-data>=1.0.5",
    "outlines>=1.2.12",
    "pydantic>=2.12.5",
    "optuna>=4.8.0",
    "optuna-dashboard>=0.20.0",
    "scikit-learn>=1.3.0",
    "openpyxl>=3.1.5",
    "openai>=2.30.0",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "jupyterlab>=4.0.0",
    "ipywidgets>=8.0.0",
]
